修改图标，添加支付功能,添加控制台组件

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             height: 100%;
             background: #fafafa;
         }
-        li{
+
+        li {
             list-style: none;
         }
     </style>
@@ -24,5 +25,5 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
-<!--  <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>-->
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 </html>
