--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
-<!--<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>-->
+<script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.6.0.js"></script>
 </html>
